# achilles

./: .gitignore  README.md  __main__.py  achilles.toml  pyproject.toml  requirements.txt
.claude/: launch.json  settings.local.json
achilles/: __init__.py  __main__.py  acceptance.py  channel.py  cli.py  comfy.py  comfy_client.py  config.py  harness.py  llm.py  lmstudio.py  planner.py  protocol.py  repl.py  sessions.py  spec.py  style.py  tools.py  workflows.py  ws_channel.py
achilles/web/: app.js  index.html  styles.css
docs/: protocol.md  spec-artifact.md
examples/kata/: test_mathx.py
oracles/: refcheck.py  static_site.py  svg_check.py
tests/: test_acceptance.py  test_channel.py  test_comfy_client.py  test_comfy_tool.py  test_config.py  test_constrained_planning.py  test_events.py  test_harness.py  test_interview.py  test_json_protocol.py  test_llm.py  test_lmstudio.py  test_native_tools.py  test_plan_edit.py  test_protocol.py  test_refcheck.py  test_repl.py  test_sessions.py  test_spec.py  test_tools.py  test_workflows.py  test_ws_channel.py
