# Packaging metadata. Achilles has NO runtime dependencies (stdlib only), so
# this exists almost entirely to expose the `achilles` console command, so you
# can run it from any directory instead of `python -m achilles`.
#
#   pip install -e .        # editable: the command tracks your source edits
#
# After that, `achilles` is on PATH and defaults its workspace to the current
# directory — exactly the "cd into a project, type achilles" workflow.

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "achilles"
version = "0.1.0"
description = "A minimal agentic-coding harness for small, local models."
readme = "README.md"
requires-python = ">=3.11"   # tomllib is stdlib from 3.11
dependencies = []            # the whole point: nothing to install

[project.scripts]
achilles = "achilles.cli:main"

[tool.setuptools]
# The repo root is not a package; only the achilles/ folder is. Listing it
# explicitly keeps setuptools from trying to treat examples/ as a package.
packages = ["achilles"]
